--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Meddon');
+
 body {
     margin: 0px;
     padding: 0px;
@@ -10,15 +13,94 @@ body {
     }
 
 header {
-    background-color: gray;
+    display: flex;
+    flex-direction: column;
+
+    background-color: #f1f0ed;
 }
+
+.banner {
+    font-family: 'Meddon', cursive;
+    letter-spacing: 5px;
+    text-align: center;
+    font-size: 1em;
+    margin-top: 30px;
+}
+
+.macpic {
+    margin: 0px;
+    padding: 0px;
+}
+
+.name {
+    margin: 0px;
+    padding: 0px;
+}
+
+.tagline {
+    font-family: 'Raleway', sans-serif; 
+    font-size: 0.8em;
+    font-weight: 100;
+    margin-bottom: 15px;
+}
+
+.navbar {
+    font-family: 'Raleway', sans-serif;  
+    background-color: white;
+}
+
+ul {
+    list-style-type: none;
+    margin-left: 60px;    
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+li {
+    flex: 1 auto;
+}
+
+li a {
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: rgb(29, 27, 27);
+}
+
+li a:hover {
+    color: rgb(224, 180, 188);
+
+    
+}
+
+.hero {
+    background: url(../img/hero_.jpeg) no-repeat 50% 50%;
+    height: 100vh;
+    width: 100%;
+    margin: auto;
+    display: table;
+    top: 0;
+    background-size: cover;
+}
+    
+
     
 main{ 
     flex: 1 0 auto;
+
+    display: flex;
+    flex-direction: column;
+
     background-color: lightgray;
     
     }
 
 footer {
+    display: flex;
+    flex-direction: column;
+
     background-color: rgb(242, 242, 242);
     }
