--- a/style.css
+++ b/style.css
@@ -6,6 +6,32 @@ body {
     padding: 0px;
 }
 
+h1 {
+
+}
+
+h3 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 2em;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 100;    
+    letter-spacing: 15px;
+}
+
+h4 {
+    font-family: 'Meddon', cursive;
+    font-weight: 100;
+    text-align: center;
+    font-size: 1.5em;
+    
+}
+
+p {
+    font-family: 'Raleway', sans-serif;
+    line-height: 30px;
+    
+}
 
 .page {
     display: flex;
@@ -47,6 +73,7 @@ header {
 .navbar {
     font-family: 'Raleway', sans-serif;  
     background-color: white;
+    font-size: 0.8em;    
 }
 
 ul {
@@ -97,6 +124,15 @@ main{
     background-color: lightgray;
     
     }
+
+.bio {
+    width: 50%;
+    margin: auto;
+}
+
+.curriculum {
+    background-color: rgb(247, 232, 234);
+}
 
 footer {
     display: flex;
