--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ h1 {
 
 }
 
+h2 {
+    font-family: 'Raleway', sans-serif; 
+    font-size: 0.8em;
+    font-weight: 100;
+    margin-bottom: 15px;
+}
+
 h3 {
     font-family: 'Raleway', sans-serif;
     font-size: 2em;
@@ -31,6 +38,10 @@ p {
     font-family: 'Raleway', sans-serif;
     line-height: 30px;
     
+}
+
+a:visited {
+    color: rgb(29, 27, 27);
 }
 
 .page {
@@ -64,10 +75,7 @@ header {
 }
 
 .tagline {
-    font-family: 'Raleway', sans-serif; 
-    font-size: 0.8em;
-    font-weight: 100;
-    margin-bottom: 15px;
+
 }
 
 .navbar {
@@ -91,7 +99,7 @@ li {
 
 li a {
     font-family: 'Raleway', sans-serif;
-    letter-spacing: 3px;
+    letter-spacing: 5px;
     text-transform: uppercase;
     text-decoration: none;
     color: rgb(29, 27, 27);
@@ -155,13 +163,127 @@ main{
 }
 
 .favs {
-    background-color: #f1f0ed;
+    background-color: rgb(247, 232, 234);
     text-align: center;
+    padding: 50px 0px;
 }
 
 footer {
     display: flex;
     flex-direction: column;
 
+    
     background-color: rgb(242, 242, 242);
     }
+
+.contact {
+    text-align: center;
+
+    background-color: #f1f0ed;
+    /*background-color: rgb(248, 234, 237);*/
+    font-family: 'Raleway', sans-serif;
+
+}
+
+.contactWrapper {
+    border: solid 2px  #acaaa3;
+    margin: 40px 80px;
+    color: #acaaa3;
+}
+
+/*Contactform*/
+form {
+    background-color: #f1f0ed;
+    max-width: 60vw;
+    margin: auto;    
+    padding: 50px;
+    border-radius: 5px;
+    color: #acaaa3;
+    
+}
+
+
+input[type=text] {
+    width: 100%;
+    height: 30px;
+    padding: 5px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: white;
+    
+}
+
+input[type=text]:focus {
+    border: 1px solid #555;
+}
+
+input[type=number] {
+    width: 100%;
+    height: 30px;
+    padding: 5px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: white;
+    
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+}
+
+
+
+/*knappen på kontaktformuläret*/
+
+input[type=submit] {
+    background-color: white;
+    color: #555;
+    padding: 12px 20px;
+    border: 1px solid #555;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+
+input[type=submit]:hover {
+    background-color: #555;
+    color: white;
+}
+
+
+
+
+.social {
+    display: flex;
+
+    background-color: darkgray;
+    padding: 30px;
+}
+
+.column {
+    flex: 1;
+    height: auto;
+
+    border: dotted 1px black;
+    
+
+    font-family: 'Raleway', sans-serif;
+    font-size: 80%;    
+    letter-spacing: 2px;
+    
+        
+}
+
+.fa {
+    border: solid rgb(29, 27, 27) 2px;
+    padding: 5px;
+    margin: 0px 5px;  
+}
+
+/* Clear floats after the columns */
+.social:after {
+    content: "";
+    display: table;
+    clear: both;
+}
