--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ footer {
     background-color: rgb(242, 242, 242);
     }
 
+/*Contact Area*/
 .contact {
     text-align: center;
 
@@ -187,19 +188,18 @@ footer {
 
 .contactWrapper {
     border: solid 2px  #acaaa3;
-    margin: 40px 80px;
+    width: 70%;
+    margin: 60px auto;
     color: #acaaa3;
 }
 
 /*Contactform*/
 form {
-    background-color: #f1f0ed;
     max-width: 60vw;
     margin: auto;    
     padding: 50px;
-    border-radius: 5px;
+    border-radius: 50px;
     color: #acaaa3;
-    
 }
 
 
@@ -209,12 +209,11 @@ input[type=text] {
     padding: 5px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    background-color: white;
-    
+    background-color: white; 
 }
 
 input[type=text]:focus {
-    border: 1px solid #555;
+    border: 1px solid #acaaa3;
 }
 
 input[type=number] {
@@ -230,6 +229,7 @@ input[type=number] {
 textarea {
     width: 100%;
     height: 100px;
+    border: 1px solid  #acaaa3;
 }
 
 
@@ -238,16 +238,16 @@ textarea {
 
 input[type=submit] {
     background-color: white;
-    color: #555;
+    color:  #acaaa3;
     padding: 12px 20px;
-    border: 1px solid #555;
+    border: 1px solid  #acaaa3;
     border-radius: 4px;
     cursor: pointer;
 
 }
 
 input[type=submit]:hover {
-    background-color: #555;
+    background-color:  #acaaa3;
     color: white;
 }
 
@@ -264,19 +264,20 @@ input[type=submit]:hover {
 .column {
     flex: 1;
     height: auto;
-
-    border: dotted 1px black;
     
-
+    text-align: center;
     font-family: 'Raleway', sans-serif;
-    font-size: 80%;    
     letter-spacing: 2px;
-    
-        
+     
+}
+
+.column a {
+    color: rgb(29, 27, 27);
+    font-size: 0.8em;
 }
 
 .fa {
-    border: solid rgb(29, 27, 27) 2px;
+    border: solid 1px rgb(29, 27, 27);
     padding: 5px;
     margin: 0px 5px;  
 }
