--- a/style.css
+++ b/style.css
@@ -48,7 +48,13 @@ p {
 
 a {
     color: rgb(29, 27, 27);
+    
 }
+
+a:link {
+    text-decoration: none;
+}
+
 a:visited {
     color: rgb(29, 27, 27);
 }
@@ -112,7 +118,6 @@ li a {
     font-family: 'Raleway', sans-serif;
     letter-spacing: 5px;
     text-transform: uppercase;
-    text-decoration: none;
     color: rgb(29, 27, 27);
 }
 
@@ -150,6 +155,20 @@ main{
     margin: auto;
 }
 
+.places {
+    background-color: darkgray;
+    color: white;
+    padding: 0px;
+    margin: 0px;
+}
+
+.places h5 {
+    font-size: 1em;
+    font-weight: 100;
+    letter-spacing: 12px;
+    padding-top: 0px; 
+    margin-top: 0px;
+}
 
 
 .curriculum {
@@ -184,6 +203,20 @@ main{
     margin: 50px;
     padding: 20px;
 }
+
+.project h4 {
+    padding-bottom: 7px;
+    margin-bottom: 0px;
+}
+
+.project h5 {
+    letter-spacing: 3px;
+    padding-top: 0px;
+    margin-top: 0px;
+    font-size: 0.7em;
+    font-weight: 100;
+}
+
 
 .favs {
     background-color: rgb(247, 232, 234);
