--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+/*MINA FONTS*/
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Meddon');
 
+/*ALLMÄNA TAGS*/
 body {
     margin: 0px;
     padding: 0px;
@@ -31,7 +33,6 @@ h4 {
     font-weight: 100;
     text-align: center;
     font-size: 1.5em;
-    
 }
 
 h5 {
@@ -43,12 +44,10 @@ h5 {
 p {
     font-family: 'Raleway', sans-serif;
     line-height: 30px;
-    
 }
 
 a {
     color: rgb(29, 27, 27);
-    
 }
 
 a:link {
@@ -59,13 +58,13 @@ a:visited {
     color: rgb(29, 27, 27);
 }
 
-/*Allt i body*/
+/*ALLT I BODY*/
 .page {
     display: flex;
     flex-direction: column;
     }
 
-/*Header*/
+/*HEADER*/
 header {
     display: flex;
     flex-direction: column;
@@ -95,7 +94,7 @@ header {
 
 }
 
-/*Navbar Style*/
+/*NAVBAR*/
 .navbar {
     font-family: 'Raleway', sans-serif;  
     background-color: white;
@@ -127,7 +126,7 @@ li a:hover {
     
 }
 
-/*Hero image*/
+/*HERO IMAGE*/
 .hero {
     background: url(../img/hero_.jpeg) no-repeat 50% 50%;
     height: 100vh;
@@ -139,7 +138,7 @@ li a:hover {
 }
     
 
-/*Innehåll på sidan*/ 
+/*CONTENT*/ 
 main{ 
     flex: 1 0 auto;
 
@@ -150,6 +149,7 @@ main{
     
     }
 
+/*BIO*/ 
 .bio {
     width: 50%;
     margin: auto;
@@ -170,7 +170,7 @@ main{
     margin-top: 0px;
 }
 
-
+/*CURRICULUM*/ 
 .curriculum {
     background-color: rgb(247, 232, 234);
     text-align: center;
@@ -187,6 +187,7 @@ main{
     line-height: 200%;
 }
 
+/*GALLERY*/ 
 .gallery {
     display: flex;
     
@@ -217,7 +218,7 @@ main{
     font-weight: 100;
 }
 
-
+/*FAVS*/ 
 .favs {
     background-color: rgb(247, 232, 234);
     text-align: center;
@@ -232,6 +233,7 @@ main{
     width: 15%;
 }
 
+/*QUOTE*/ 
 .quote {
     background-color: darkgray;
     
@@ -247,7 +249,6 @@ main{
 
 
 /*CONTACT AREA*/
-
 .contact {
     background-color: #f1f0ed;
     /*background-color: rgb(248, 234, 237);*/
@@ -260,7 +261,7 @@ main{
     color: #acaaa3;
 }
 
-/*Contact form*/
+/*CONTANT FORM*/
 form {
     max-width: 60vw;
     margin: auto;    
@@ -303,7 +304,7 @@ textarea {
 }
 
 
-/*knappen på kontaktformuläret*/
+/*BUTTON CONTACT FORM*/
 
 input[type=submit] {
     background-color: white;
@@ -365,7 +366,7 @@ footer {
     clear: both;
 }
 
-/*Mobilanpassad*/
+/*   ----- MOBILE FRIENDLY ----- */
 @media (max-width: 400px) {
 
     ul {
@@ -408,12 +409,17 @@ footer {
         padding: 5px 15px;
     }
 
-    .footersocial {
-        display: block;
-    }
-  
     .keep {
         font-size: 1.5em;
+    }
+
+    .contactWrapper {
+        width: 80%;
+        margin: 60px auto;
+    }
+
+    .footersocial {
+        display: block;
     }
 
   }
